<resources>
    <string name="app_name">Partkeepr Scannr</string>

    <!-- Strings related to login -->
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_server">Server</string>
    <string name="action_copy_staktrace">Copy</string>
    <string name="action_mail_staktrace">Mail</string>
    <string name="action_login">Login</string>
    <string name="app_header">PARTKEEPR SCANNR</string>
    <string name="app_footer">Developed by \n Marcus Drobisch</string>
    <string name="error_invalid_user">This user is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_password_user">Wrong username or password!</string>
    <string name="error_unauthorized">Unauthorized</string>
    <string name="error_field_required">This field is required</string>

    <string name="error_not_found">Not found</string>
    <string name="error_part_not_exists">This part does not exists</string>

    <string name="error_connection">Connection error</string>
    <string name="error_connection_long">The connection failed!</string>

    <string name="error_http">HTTP Error</string>
    <string name="error_http_long">Connection failed with http-code</string>
    <string name="error_server_connect_failed">Failed to connect to server</string>
    <string name="error_unknown">A unknown error occurred</string>



    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_settings">Settings</string>
    <string name="settings_activity_title">Partkeepr App - Settings</string>




</resources>
